--- a/WYJPLearn/Controller/Lesson/Lesson.storyboard
+++ b/WYJPLearn/Controller/Lesson/Lesson.storyboard
@@ -1,7 +1,76 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Phonematic Chart View Controller-->
+        <scene sceneID="qIF-Eq-hUO">
+            <objects>
+                <viewController storyboardIdentifier="WYPhonematicChartViewController" id="SSq-Zg-rvd" customClass="WYPhonematicChartViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ma5-DG-rd3"/>
+                        <viewControllerLayoutGuide type="bottom" id="0Eo-tZ-43S"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7DF-8r-P12">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vB7-2l-nhq">
+                                <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="5h1-Zv-IGz">
+                                    <size key="itemSize" width="99" height="69"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="kAL-sR-wGr">
+                                        <rect key="frame" x="5" y="64" width="99" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="99" height="69"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="SSq-Zg-rvd" id="TZn-Uh-C1B"/>
+                                    <outlet property="delegate" destination="SSq-Zg-rvd" id="PXb-8a-KX2"/>
+                                </connections>
+                            </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gLE-I7-4hx" customClass="WYSelectView">
+                                <rect key="frame" x="0.0" y="431" width="320" height="49"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="Re5-LM-zeI"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="gLE-I7-4hx" secondAttribute="trailing" id="1W7-hO-qJ0"/>
+                            <constraint firstAttribute="trailing" secondItem="vB7-2l-nhq" secondAttribute="trailing" id="2Z5-JE-uDa"/>
+                            <constraint firstItem="0Eo-tZ-43S" firstAttribute="top" secondItem="vB7-2l-nhq" secondAttribute="bottom" constant="49" id="Dij-5G-aRb"/>
+                            <constraint firstItem="gLE-I7-4hx" firstAttribute="leading" secondItem="7DF-8r-P12" secondAttribute="leading" id="HOr-an-U8L"/>
+                            <constraint firstItem="vB7-2l-nhq" firstAttribute="leading" secondItem="7DF-8r-P12" secondAttribute="leading" id="JzD-OT-YQG"/>
+                            <constraint firstItem="vB7-2l-nhq" firstAttribute="top" secondItem="ma5-DG-rd3" secondAttribute="bottom" id="b9o-oh-YDn"/>
+                            <constraint firstItem="0Eo-tZ-43S" firstAttribute="top" secondItem="gLE-I7-4hx" secondAttribute="bottom" id="rqx-tw-aCp"/>
+                        </constraints>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="_collectionView" destination="vB7-2l-nhq" id="nfV-0E-eY3"/>
+                        <outlet property="_selectView" destination="gLE-I7-4hx" id="m8p-6f-sf5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3MU-4W-MHf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="462" y="91"/>
+        </scene>
+    </scenes>
 </document>
