--- a/WYJPLearn/Controller/Example/WYExample.storyboard
+++ b/WYJPLearn/Controller/Example/WYExample.storyboard
@@ -26,29 +26,38 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdp-hr-9s7">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdp-hr-9s7">
                                 <rect key="frame" x="20" y="378" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="4hc-8c-1Vy"/>
                                     <constraint firstAttribute="width" constant="80" id="ggY-fA-D7r"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onAnswerOneBtnClicked:" destination="gvM-k3-VlV" eventType="touchUpInside" id="JUo-nk-5vy"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z8h-dY-8XX">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z8h-dY-8XX">
                                 <rect key="frame" x="119" y="378" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3il-NI-TAX"/>
                                     <constraint firstAttribute="width" constant="80" id="ZYe-Dg-tcQ"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onAnswerTwoBtnClicked:" destination="gvM-k3-VlV" eventType="touchUpInside" id="OZw-XV-JvY"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOn-Ic-4Ca">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOn-Ic-4Ca">
                                 <rect key="frame" x="220" y="378" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="RCT-KH-ba4"/>
                                     <constraint firstAttribute="height" constant="30" id="aBF-gk-ho9"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onAnswerThreeBtnClicked:" destination="gvM-k3-VlV" eventType="touchUpInside" id="L5P-NI-aRZ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RoU-mW-2Hz">
                                 <rect key="frame" x="119" y="436" width="80" height="30"/>
