--- a/WYJPLearn/Controller/Lesson/Lesson.storyboard
+++ b/WYJPLearn/Controller/Lesson/Lesson.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Phonematic Chart View Controller-->
@@ -18,23 +18,48 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vB7-2l-nhq">
-                                <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="431"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="5h1-Zv-IGz">
-                                    <size key="itemSize" width="99" height="69"/>
+                                    <size key="itemSize" width="102" height="72"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="kAL-sR-wGr">
-                                        <rect key="frame" x="5" y="64" width="99" height="69"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="wyNoteIndentifier" id="tHx-0s-kMs" customClass="WYAudioFontCollectionViewCell">
+                                        <rect key="frame" x="5" y="0.0" width="102" height="72"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="99" height="69"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="102" height="72"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZPH-0e-BhC">
+                                                    <rect key="frame" x="30" y="0.0" width="42" height="35"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lPa-eO-p3S">
+                                                    <rect key="frame" x="8" y="36" width="42" height="36"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xub-Zt-W7j">
+                                                    <rect key="frame" x="52" y="36" width="42" height="36"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <connections>
+                                            <outlet property="firstLabel" destination="ZPH-0e-BhC" id="DiM-kH-DPP"/>
+                                            <outlet property="secondLabel" destination="lPa-eO-p3S" id="m61-hb-iMA"/>
+                                            <outlet property="thirdLabel" destination="Xub-Zt-W7j" id="gDX-hV-2Il"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -57,11 +82,10 @@
                             <constraint firstItem="0Eo-tZ-43S" firstAttribute="top" secondItem="vB7-2l-nhq" secondAttribute="bottom" constant="49" id="Dij-5G-aRb"/>
                             <constraint firstItem="gLE-I7-4hx" firstAttribute="leading" secondItem="7DF-8r-P12" secondAttribute="leading" id="HOr-an-U8L"/>
                             <constraint firstItem="vB7-2l-nhq" firstAttribute="leading" secondItem="7DF-8r-P12" secondAttribute="leading" id="JzD-OT-YQG"/>
-                            <constraint firstItem="vB7-2l-nhq" firstAttribute="top" secondItem="ma5-DG-rd3" secondAttribute="bottom" id="b9o-oh-YDn"/>
+                            <constraint firstItem="vB7-2l-nhq" firstAttribute="top" secondItem="ma5-DG-rd3" secondAttribute="bottom" constant="-20" id="b9o-oh-YDn"/>
                             <constraint firstItem="0Eo-tZ-43S" firstAttribute="top" secondItem="gLE-I7-4hx" secondAttribute="bottom" id="rqx-tw-aCp"/>
                         </constraints>
                     </view>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="_collectionView" destination="vB7-2l-nhq" id="nfV-0E-eY3"/>
