--- a/WYJPLearn/Controller/Example/WYExample.storyboard
+++ b/WYJPLearn/Controller/Example/WYExample.storyboard
@@ -27,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdp-hr-9s7">
-                                <rect key="frame" x="20" y="378" width="80" height="30"/>
+                                <rect key="frame" x="21" y="378" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="4hc-8c-1Vy"/>
                                     <constraint firstAttribute="width" constant="80" id="ggY-fA-D7r"/>
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z8h-dY-8XX">
-                                <rect key="frame" x="119" y="378" width="80" height="30"/>
+                                <rect key="frame" x="120" y="378" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3il-NI-TAX"/>
                                     <constraint firstAttribute="width" constant="80" id="ZYe-Dg-tcQ"/>
@@ -49,7 +49,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOn-Ic-4Ca">
-                                <rect key="frame" x="220" y="378" width="80" height="30"/>
+                                <rect key="frame" x="221" y="378" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="RCT-KH-ba4"/>
                                     <constraint firstAttribute="height" constant="30" id="aBF-gk-ho9"/>
@@ -82,10 +82,17 @@
                             <constraint firstItem="RoU-mW-2Hz" firstAttribute="leading" secondItem="RRH-qF-e01" secondAttribute="leading" constant="119" id="O1H-4i-a5M"/>
                             <constraint firstItem="6aV-jH-sWQ" firstAttribute="leading" secondItem="RRH-qF-e01" secondAttribute="leading" constant="91" id="RPo-Ku-QFc"/>
                             <constraint firstItem="ie3-Tl-EwW" firstAttribute="top" secondItem="z8h-dY-8XX" secondAttribute="bottom" constant="72" id="VGO-Sl-RLe"/>
-                            <constraint firstItem="z8h-dY-8XX" firstAttribute="centerX" secondItem="RRH-qF-e01" secondAttribute="centerX" constant="-1" id="WaP-Dt-JcY"/>
+                            <constraint firstItem="z8h-dY-8XX" firstAttribute="centerX" secondItem="RRH-qF-e01" secondAttribute="centerX" id="WaP-Dt-JcY"/>
+                            <constraint firstItem="hdp-hr-9s7" firstAttribute="leading" secondItem="RRH-qF-e01" secondAttribute="leading" constant="20" id="mqg-7t-MMH"/>
                             <constraint firstAttribute="trailing" secondItem="RoU-mW-2Hz" secondAttribute="trailing" constant="121" id="stT-RC-r4X"/>
                             <constraint firstItem="SOn-Ic-4Ca" firstAttribute="leading" secondItem="z8h-dY-8XX" secondAttribute="trailing" constant="21" id="vUg-kg-obW"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="mqg-7t-MMH"/>
+                                <exclude reference="stT-RC-r4X"/>
+                            </mask>
+                        </variation>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
