add review log viewcontroller

--- a/WYJPLearn/Controller/Setting/WYSetting.storyboard
+++ b/WYJPLearn/Controller/Setting/WYSetting.storyboard
@@ -156,5 +156,34 @@
             </objects>
             <point key="canvasLocation" x="251" y="490"/>
         </scene>
+        <!--Show Log Table View Controller-->
+        <scene sceneID="wdF-bF-hZZ">
+            <objects>
+                <tableViewController storyboardIdentifier="WYShowLogTableViewController" id="jxI-4C-iMJ" customClass="WYShowLogTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="B7D-jK-f1f">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="wyLogInfoReuseIdentifier" id="zl1-lC-ZIV">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zl1-lC-ZIV" id="lrl-iF-9ve">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="jxI-4C-iMJ" id="Mrq-Jb-Vt6"/>
+                            <outlet property="delegate" destination="jxI-4C-iMJ" id="8OX-6h-xck"/>
+                        </connections>
+                    </tableView>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vJP-2u-LaT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="391" y="1300"/>
+        </scene>
     </scenes>
 </document>
